k should be upper case

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ convert_stacked_dm4_to_tiff = "cfntem.cmd.convert_stacked_dm4_to_tiff:main"
 drift_correction = "cfntem.cmd.drift_correction:main"
 drift_corrected_average = "cfntem.cmd.drift_corrected_average:main"
 udvd_denoising = "cfntem.cmd.udvd_denoising:main"
-read_k2 = "cfntem.cmd.read_K2:main"
+read_K2 = "cfntem.cmd.read_K2:main"
 
 [tool.hatch.build]
 include = ["cfntem", "info"]
